Resolve mobile image background, add visible controls to mobile carousel

--- a/css/scss/carousel.scss
+++ b/css/scss/carousel.scss
@@ -13,3 +13,16 @@
     display: none;
   }
 }
+
+.carousel-control-next-icon:after
+{
+  content: '>';
+  font-size: 55px;
+  color: $gray-700;
+}
+
+.carousel-control-prev-icon:after {
+  content: '<';
+  font-size: 55px;
+  color: $gray-700;
+}
